terra-python/terra.py

"""
terra.py — Python ctypes wrapper for Terra Zig Core (libtera).

Auto-loadable binding generated from terra.h. Provides:
  - Terra: Main SDK handle (init/shutdown lifecycle)
  - TerraSpan: Span wrapper with attribute setters
  - TerraConfig: Configuration dataclass
  - SpanContext: Trace context propagation

Usage:
    from terra import Terra

    terra = Terra.init(service_name="my-service")

    with terra.span("inference", model="gpt-4") as span:
        span.set_string("gen_ai.request.max_tokens", "1024")
        # ... do inference ...

    terra.shutdown()
"""

from __future__ import annotations

import ctypes
import ctypes.util
import os
import platform
import sys
from contextlib import contextmanager
from dataclasses import dataclass, field
from enum import IntEnum
from pathlib import Path
from typing import Generator, Optional, Union


# ── Error codes ──────────────────────────────────────────────────────────

class TerraError(IntEnum):
    OK = 0
    ALREADY_INITIALIZED = 1
    NOT_INITIALIZED = 2
    INVALID_CONFIG = 3
    OUT_OF_MEMORY = 4
    TRANSPORT_FAILED = 5
    SHUTTING_DOWN = 6


class TerraState(IntEnum):
    STOPPED = 0
    STARTING = 1
    RUNNING = 2
    SHUTTING_DOWN = 3


class ContentPolicy(IntEnum):
    NEVER = 0
    OPT_IN = 1
    ALWAYS = 2


class RedactionStrategy(IntEnum):
    DROP = 0
    LENGTH_ONLY = 1
    HMAC_SHA256 = 2


class StatusCode(IntEnum):
    UNSET = 0
    OK = 1
    ERROR = 2


# ── C structs ────────────────────────────────────────────────────────────

class CSpanContext(ctypes.Structure):
    """Matches terra_span_context_t in terra.h."""
    _fields_ = [
        ("trace_id_hi", ctypes.c_uint64),
        ("trace_id_lo", ctypes.c_uint64),
        ("span_id", ctypes.c_uint64),
    ]


class CVersion(ctypes.Structure):
    """Matches terra_version_t in terra.h."""
    _fields_ = [
        ("major", ctypes.c_uint32),
        ("minor", ctypes.c_uint32),
        ("patch", ctypes.c_uint32),
    ]


class CTransportVTable(ctypes.Structure):
    """Matches terra_transport_vtable_t in terra.h."""
    SEND_FN = ctypes.CFUNCTYPE(ctypes.c_int, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32, ctypes.c_void_p)
    FLUSH_FN = ctypes.CFUNCTYPE(None, ctypes.c_void_p)
    SHUTDOWN_FN = ctypes.CFUNCTYPE(None, ctypes.c_void_p)

    _fields_ = [
        ("send_fn", SEND_FN),
        ("flush_fn", FLUSH_FN),
        ("shutdown_fn", SHUTDOWN_FN),
        ("context", ctypes.c_void_p),
    ]


class CSchedulerVTable(ctypes.Structure):
    """Matches terra_scheduler_vtable_t in terra.h."""
    _fields_ = [
        ("schedule_fn", ctypes.c_void_p),
        ("cancel_fn", ctypes.c_void_p),
        ("context", ctypes.c_void_p),
    ]


class CStorageVTable(ctypes.Structure):
    """Matches terra_storage_vtable_t in terra.h."""
    _fields_ = [
        ("write_fn", ctypes.c_void_p),
        ("read_fn", ctypes.c_void_p),
        ("discard_oldest_fn", ctypes.c_void_p),
        ("available_bytes_fn", ctypes.c_void_p),
        ("context", ctypes.c_void_p),
    ]


class CConfig(ctypes.Structure):
    """Matches terra_config_t in terra.h."""
    _fields_ = [
        ("max_spans", ctypes.c_uint32),
        ("max_attributes_per_span", ctypes.c_uint16),
        ("max_events_per_span", ctypes.c_uint16),
        ("max_event_attrs", ctypes.c_uint16),
        ("batch_size", ctypes.c_uint32),
        ("flush_interval_ms", ctypes.c_uint64),
        ("content_policy", ctypes.c_int),
        ("redaction_strategy", ctypes.c_int),
        ("hmac_key", ctypes.c_char_p),
        ("emit_legacy_sha256", ctypes.c_bool),
        ("service_name", ctypes.c_char_p),
        ("service_version", ctypes.c_char_p),
        ("otlp_endpoint", ctypes.c_char_p),
        ("clock_fn", ctypes.c_void_p),
        ("clock_ctx", ctypes.c_void_p),
        ("transport_vtable", CTransportVTable),
        ("scheduler_vtable", CSchedulerVTable),
        ("storage_vtable", CStorageVTable),
    ]


# ── Library loader ───────────────────────────────────────────────────────

def _find_libtera() -> str:
    """Locate libtera shared library using standard search paths."""
    # Check environment variable first
    env_path = os.environ.get("TERRA_LIB_PATH")
    if env_path and os.path.isfile(env_path):
        return env_path

    # Check common relative paths from this file
    this_dir = Path(__file__).parent
    candidates = [
        this_dir / ".." / "zig-core" / "zig-out" / "lib" / "libterra_shared.dylib",
        this_dir / ".." / "zig-core" / "zig-out" / "lib" / "libterra_shared.so",
        this_dir / ".." / "zig-core" / "zig-out" / "lib" / "terra_shared.dll",
        Path("/usr/local/lib/libterra_shared.so"),
        Path("/usr/local/lib/libterra_shared.dylib"),
    ]

    for candidate in candidates:
        resolved = candidate.resolve()
        if resolved.is_file():
            return str(resolved)

    # Try system library search
    found = ctypes.util.find_library("terra_shared")
    if found:
        return found

    raise FileNotFoundError(
        "Cannot find libterra_shared. Set TERRA_LIB_PATH environment variable, "
        "or build with: cd zig-core && zig build"
    )


def _load_lib(path: Optional[str] = None) -> ctypes.CDLL:
    """Load and configure the Terra C library."""
    lib_path = path or _find_libtera()
    lib = ctypes.CDLL(lib_path)

    # ── Lifecycle ─────────────────────────────────────────────────────
    lib.terra_init.argtypes = [ctypes.POINTER(CConfig)]
    lib.terra_init.restype = ctypes.c_void_p

    lib.terra_shutdown.argtypes = [ctypes.c_void_p]
    lib.terra_shutdown.restype = ctypes.c_int

    lib.terra_get_state.argtypes = [ctypes.c_void_p]
    lib.terra_get_state.restype = ctypes.c_uint8

    lib.terra_is_running.argtypes = [ctypes.c_void_p]
    lib.terra_is_running.restype = ctypes.c_bool

    # ── Configuration ─────────────────────────────────────────────────
    lib.terra_set_session_id.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.terra_set_session_id.restype = ctypes.c_int

    lib.terra_set_service_info.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]
    lib.terra_set_service_info.restype = ctypes.c_int

    # ── Span creation ─────────────────────────────────────────────────
    for fn_name in [
        "terra_begin_inference_span_ctx",
        "terra_begin_embedding_span_ctx",
        "terra_begin_agent_span_ctx",
        "terra_begin_tool_span_ctx",
        "terra_begin_safety_span_ctx",
        "terra_begin_streaming_span_ctx",
    ]:
        fn = getattr(lib, fn_name)
        fn.argtypes = [ctypes.c_void_p, ctypes.POINTER(CSpanContext), ctypes.c_char_p, ctypes.c_bool]
        fn.restype = ctypes.c_void_p

    # ── Span mutation ─────────────────────────────────────────────────
    lib.terra_span_set_string.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]
    lib.terra_span_set_string.restype = None

    lib.terra_span_set_int.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_int64]
    lib.terra_span_set_int.restype = None

    lib.terra_span_set_double.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_double]
    lib.terra_span_set_double.restype = None

    lib.terra_span_set_bool.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_bool]
    lib.terra_span_set_bool.restype = None

    lib.terra_span_set_status.argtypes = [ctypes.c_void_p, ctypes.c_uint8, ctypes.c_char_p]
    lib.terra_span_set_status.restype = None

    lib.terra_span_end.argtypes = [ctypes.c_void_p, ctypes.c_void_p]
    lib.terra_span_end.restype = None

    # ── Events ────────────────────────────────────────────────────────
    lib.terra_span_add_event.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.terra_span_add_event.restype = None

    lib.terra_span_add_event_ts.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_uint64]
    lib.terra_span_add_event_ts.restype = None

    # ── Error recording ───────────────────────────────────────────────
    lib.terra_span_record_error.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_bool]
    lib.terra_span_record_error.restype = None

    # ── Streaming ─────────────────────────────────────────────────────
    lib.terra_streaming_record_token.argtypes = [ctypes.c_void_p]
    lib.terra_streaming_record_token.restype = None

    lib.terra_streaming_record_first_token.argtypes = [ctypes.c_void_p]
    lib.terra_streaming_record_first_token.restype = None

    lib.terra_streaming_end.argtypes = [ctypes.c_void_p]
    lib.terra_streaming_end.restype = None

    # ── Context extraction ────────────────────────────────────────────
    lib.terra_span_context.argtypes = [ctypes.c_void_p]
    lib.terra_span_context.restype = CSpanContext

    # ── Diagnostics ───────────────────────────────────────────────────
    lib.terra_last_error.argtypes = []
    lib.terra_last_error.restype = ctypes.c_int

    lib.terra_last_error_message.argtypes = [ctypes.c_char_p, ctypes.c_uint32]
    lib.terra_last_error_message.restype = ctypes.c_uint32

    lib.terra_spans_dropped.argtypes = [ctypes.c_void_p]
    lib.terra_spans_dropped.restype = ctypes.c_uint64

    lib.terra_transport_degraded.argtypes = [ctypes.c_void_p]
    lib.terra_transport_degraded.restype = ctypes.c_bool

    # ── Version ───────────────────────────────────────────────────────
    lib.terra_get_version.argtypes = []
    lib.terra_get_version.restype = CVersion

    # ── Metrics ───────────────────────────────────────────────────────
    lib.terra_record_inference_duration.argtypes = [ctypes.c_void_p, ctypes.c_double]
    lib.terra_record_inference_duration.restype = None

    lib.terra_record_token_count.argtypes = [ctypes.c_void_p, ctypes.c_int64, ctypes.c_int64]
    lib.terra_record_token_count.restype = None

    return lib


# ── Public API ───────────────────────────────────────────────────────────

@dataclass
class SpanContext:
    """Trace context for parent-child span propagation."""
    trace_id_hi: int = 0
    trace_id_lo: int = 0
    span_id: int = 0

    def _to_c(self) -> CSpanContext:
        ctx = CSpanContext()
        ctx.trace_id_hi = self.trace_id_hi
        ctx.trace_id_lo = self.trace_id_lo
        ctx.span_id = self.span_id
        return ctx

    @classmethod
    def _from_c(cls, c_ctx: CSpanContext) -> SpanContext:
        return cls(
            trace_id_hi=c_ctx.trace_id_hi,
            trace_id_lo=c_ctx.trace_id_lo,
            span_id=c_ctx.span_id,
        )

    @property
    def is_valid(self) -> bool:
        return not (self.trace_id_hi == 0 and self.trace_id_lo == 0 and self.span_id == 0)

    @property
    def trace_id_hex(self) -> str:
        return f"{self.trace_id_hi:016x}{self.trace_id_lo:016x}"

    @property
    def span_id_hex(self) -> str:
        return f"{self.span_id:016x}"


@dataclass
class TerraConfig:
    """Configuration for Terra SDK initialization."""
    service_name: str = "unknown"
    service_version: str = "0.0.0"
    otlp_endpoint: str = "http://localhost:4318"
    max_spans: int = 1024
    max_attributes_per_span: int = 64
    max_events_per_span: int = 8
    max_event_attrs: int = 4
    batch_size: int = 256
    flush_interval_ms: int = 5000
    content_policy: ContentPolicy = ContentPolicy.NEVER
    redaction_strategy: RedactionStrategy = RedactionStrategy.HMAC_SHA256
    hmac_key: Optional[str] = None
    emit_legacy_sha256: bool = False


class TerraSpan:
    """Wrapper around a Terra span handle. Use as a context manager or call end() manually."""

    def __init__(self, lib: ctypes.CDLL, inst_handle: ctypes.c_void_p, span_handle: ctypes.c_void_p) -> None:
        self._lib = lib
        self._inst = inst_handle
        self._handle = span_handle
        self._ended = False

    @property
    def handle(self) -> ctypes.c_void_p:
        return self._handle

    @property
    def is_valid(self) -> bool:
        return self._handle is not None and self._handle != 0
